@@ -1,23 +1,0 @@
-Changes
-Fast.xs
-lib/URI/Fast.pm
-lib/URI/Fast/Benchmarks.pod
-lib/URI/Fast/Test.pm
-Makefile.PL
-MANIFEST
-MANIFEST.SKIP
-ppport.h
-query.c
-README.pod
-strnspn.c
-t/basics.t
-t/compare.t
-t/encoding.t
-t/ipv.t
-t/iri.t
-t/memory.t
-t/param.t
-t/parsing.t
-t/query_keyset.t
-t/test.t
-t/tied.t
