@@ -1,0 +1,14 @@
+name = URI-Fast
+author = Jeff Ober <sysread@fastmail.fm>
+license = Perl_5
+copyright_holder = Jeff Ober
+
+[GatherDir]
+exclude_filename = bench.pl
+
+[@Filter]
+-bundle = @Author::BLUEFEET
+-remove = GatherDir
+
+[PodWeaver]
+[MetaProvides::Package]
