@@ -1,0 +1,12 @@
+package URI::Fast::IRI;
+# ABSTRACT: IRI support for URI::Fast
+
+our @ISA = qw(URI::Fast);
+
+=head1 DESCRIPTION
+
+See L<URI::Fast/iri>.
+
+=cut
+
+1;
